--- a/my-parent/pom.xml
+++ b/my-parent/pom.xml
@@ -34,7 +34,7 @@
 					<version>3.3.0</version>
 					<configuration>
 						<version>7</version>
-						<defaultLibBundleDir>lib/</defaultLibBundleDir>
+						<defaultLibBundleDir>lib</defaultLibBundleDir>
 						<skinnyWars>true</skinnyWars>
 						<outputFileNameMapping>@{artifactId}@.@{extension}@</outputFileNameMapping>
 					</configuration>
